# boop

./: .gitattributes  ACKNOWLEDGEMENTS  Cargo.toml  LICENSE  build.rs
.github/: README.md
.github/assets/: config.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  assets.rs  main.rs
src/features/: mod.rs
src/features/apps/: mod.rs
src/features/config/: mod.rs  store.rs
src/features/launcher/: job.rs  mod.rs
src/features/update/: mod.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/ui/: disclaimer.rs  hub.rs  icon.rs  mod.rs  root.rs  theme.rs
