[package]
name = "boop"
version = "1.1.0"
edition = "2024"
default-run = "boop"
description = "a hub for completing Discord quests"
authors = ["whisky"]
license = "zlib"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "09165c15dc5d1fea93604231eaf30ca4c25f1cd6" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "09165c15dc5d1fea93604231eaf30ca4c25f1cd6" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "6"
regex = "1"
arc-swap = "1"
fd-lock = "4"
rust-embed = "8"
semver = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }

[target.'cfg(windows)'.build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.3"
embed-resource = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "libloaderapi",
    "windef",
    "minwindef",
    "basetsd",
    "winnt",
    "jobapi2",
    "handleapi",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
